drap n drop Image Selector - fixed uploaded picture pane should fit entire cropped image

--- a/civictechprojects/static/css/partials/_FileSelectButton.scss
+++ b/civictechprojects/static/css/partials/_FileSelectButton.scss
@@ -7,7 +7,9 @@
         height:100%;
         width:100%;
         padding:10px;
-        background-size:cover;
+        background-size:contain;
+        background-repeat: no-repeat;
+        background-position: center;
         border-radius:10px;
     }
     &.FileSelectButton-imagePreview {
